# alto

./: .changie.yaml  .dockerignore  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  Dockerfile  LICENSE  README.md  alto.example.yaml  index.html  pyproject.toml  sitemap.xml
.10x/evidence/: 2026-07-05-ci-production-readiness-verification.md  2026-07-05-docs-dependency-remediation-verification.md  2026-07-05-quality-hardening-verification.md  2026-07-05-uv-migration-verification.md  2026-07-05-zero-quality-gates-verification.md
.10x/reviews/: 2026-07-05-ci-production-readiness-review.md  2026-07-05-residual-static-analysis-debt-review.md  2026-07-05-uv-migration-quality-optimization-review.md
.10x/tickets/: 2026-07-05-ci-production-readiness.md  2026-07-05-residual-static-analysis-debt.md  2026-07-05-uv-migration-quality-optimization.md
.10x/tickets/done/: 2026-07-05-ci-production-readiness.md  2026-07-05-residual-static-analysis-debt.md  2026-07-05-uv-migration-quality-optimization.md
.changes/: 0.2.13.md  0.2.21.md
.devcontainer/: devcontainer.json
.github/workflows/: labeler.yml  release.yml  test.yml
alto/: __init__.py  __main__.py  catalog.py  config.py  constants.py  dlt_singer.py  engine.py  logger.py  main.py  models.py  repl.py  state.py  tools.py  ui.py  utils.py  version.py
alto/ext/: evidence.py  rill.py
alto/incl/: alto.local.template.json  alto.local.template.toml  alto.local.template.yaml  alto.template.json  alto.template.toml  alto.template.yaml  bls-series.json  dlt_example.py
alto/providers/: serde.py
assets/css/: styles.003c3399.css  styles.14ce86e4.css
assets/js/: 09d62748.914a9a16.js  0e384e19.10ca5d7b.js  0e384e19.a2d62319.js  0e384e19.a3a6ccd4.js  0e384e19.a49320ee.js  12db6bac.4f975f44.js  16188577.cce2696b.js  17896441.a8d64675.js  17896441.f009f34c.js  1a20bc57.7055c3c0.js  1be78505.4140159e.js  1be78505.f2398cba.js  28208562.07e85090.js  28208562.38f0b68b.js  2ca9bfff.883ab2ad.js  30fbb1b8.fc32c63d.js  33f2b0e1.46344ac2.js  4258df6f.4018a268.js  4258df6f.b51f5092.js  4e5e1559.9724a2ce.js  53ff8a57.d91aa807.js  65cea931.4e37643d.js  65cea931.e1b48566.js  822bd8ab.d5df2ec2.js  9149742e.a08632a1.js  9149742e.a1572999.js  935f2afb.01f32b36.js  935f2afb.11b0b222.js  935f2afb.14403bef.js  935f2afb.3e44163f.js  935f2afb.93ab201a.js  935f2afb.d7ef18eb.js  972.37cecbae.js  9d715c65.45ad57a4.js  9d715c65.59d5eb08.js  9d715c65.9e256d88.js  9e9084f6.c602b5a6.js  a910e72a.83448249.js  b9a75367.0ab153b7.js  b9a75367.ec50e629.js  (+22 more)
docs/: README.md  docusaurus.config.js  package-lock.json  package.json  sidebars.js
docs/cli/: index.html
docs/concepts/intro/: index.html
docs/docs/: cli.md  familiarize.md  intro.md
docs/docs/concepts/: intro.md
docs/docs/extensions/: evidence.md  intro.md  rill.md
docs/docs/integrations/: intro.md  taps.mdx  targets.mdx
docs/docs/tutorial-advanced/: catalog-purging.md  state-management.md
docs/docs/tutorial-basics/: congratulations.md  create-a-project.md  environments.mdx  example-configuration.mdx  plugin-configuration.md  project-configuration.mdx  secret-management.mdx  tap-configuration.mdx  target-configuration.mdx  utility-configuration.mdx
docs/extensions/evidence/: index.html
docs/extensions/intro/: index.html
docs/extensions/rill/: index.html
docs/familiarize/: index.html
docs/integrations/intro/: index.html
docs/integrations/taps/: index.html
docs/integrations/targets/: index.html
docs/intro/: index.html
docs/src/components/HomepageFeatures/: index.js
docs/src/components/PluginIndex/: index.js
docs/src/css/: custom.css
docs/src/pages/: index.js
docs/src/theme/DocCard/: index.js
docs/src/theme/DocCardList/: index.js
docs/tutorial-advanced/catalog-purging/: index.html
docs/tutorial-advanced/state-management/: index.html
docs/tutorial-basics/congratulations/: index.html
docs/tutorial-basics/create-a-project/: index.html
docs/tutorial-basics/environments/: index.html
docs/tutorial-basics/example-configuration/: index.html
docs/tutorial-basics/plugin-configuration/: index.html
docs/tutorial-basics/project-configuration/: index.html
docs/tutorial-basics/secret-management/: index.html
docs/tutorial-basics/tap-configuration/: index.html
docs/tutorial-basics/target-configuration/: index.html
docs/tutorial-basics/utility-configuration/: index.html
example_proj/: .gitignore  README.md  alto.yaml  asana_pipeline.py  bls_pipeline.py
example_proj/.dlt/: config.toml
examples/mappers/: add_field.py  stamp_record.py
tests/: test_functional.py  test_units.py
tests/fixtures/example_project/: .alto.json  .gitignore  alto.secrets.toml  alto.toml
tests/fixtures/example_project/output/: entry-20230301T154311.jsonl  generationmix-20230301T154311.jsonl  region-20230301T154311.jsonl
