[project]
name = "singer-alto"
version = "0.2.21"
description = "A package for managing singer.io taps and targets"
authors = [{ name = "z3z1ma", email = "butler.alex2010@gmail.com" }]
readme = "README.md"
license = "MIT"
keywords = ["alto", "singer", "tap", "target", "etl", "data", "pipeline"]
requires-python = ">=3.8,<3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "doit>=0.36.0",
    "pex>=2",
    "fsspec>=2023.1.0,<2024.0.0",
    "dynaconf>=3.1.11,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/z3z1ma/alto"
Repository = "https://github.com/z3z1ma/alto"
Documentation = "https://z3z1ma.github.io/alto/"

[project.scripts]
alto = "alto.main:main"

[dependency-groups]
dev = [
    "ruff",
    "black",
    "isort",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alto"]

[tool.uv]
package = true

[tool.black] # https://black.readthedocs.io/en/stable/usage_and_configuration/the_basics.html#configuration-via-a-file
line-length = 100
target-version = ["py38", "py39", "py310", "py311"]
preview = true

[tool.isort] # https://pycqa.github.io/isort/docs/configuration/options.html
color_output = true
line_length = 100
profile = "black"
src_paths = ["alto"]

[tool.ruff] # https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
line-length = 100
