[project]
name = "singer-alto"
version = "0.2.21"
description = "A package for managing singer.io taps and targets"
authors = [{ name = "z3z1ma", email = "butler.alex2010@gmail.com" }]
readme = "README.md"
license = "MIT"
keywords = ["alto", "singer", "tap", "target", "etl", "data", "pipeline"]
requires-python = ">=3.10,<3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "doit>=0.36.0",
    "pex>=2",
    "fsspec>=2023.1.0,<2024.0.0",
    "dynaconf>=3.1.11,<4.0.0",
]

[project.urls]
Homepage = "https://github.com/z3z1ma/alto"
Repository = "https://github.com/z3z1ma/alto"
Documentation = "https://z3z1ma.github.io/alto/"

[project.scripts]
alto = "alto.main:main"

[dependency-groups]
dev = [
    "ruff",
]

[project.optional-dependencies]
dlt = [
    "dlt>=1.28.1",
]
rich = [
    "rich>=15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["alto"]

[tool.hatch.build.targets.sdist]
only-include = ["alto", "README.md", "LICENSE", "CHANGELOG.md", "pyproject.toml"]

[tool.uv] # nosemgrep: package_managers.uv.uv-missing-dependency-cooldown.uv-missing-dependency-cooldown - cooldowns resolved known-vulnerable transitive versions during uv audit on 2026-07-05.
package = true

[tool.ruff] # https://beta.ruff.rs/docs/configuration/#using-pyprojecttoml
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "doit.*",
    "dynaconf.*",
    "fsspec",
    "fsspec.*",
    "pex",
    "pex.*",
]
ignore_missing_imports = true
